packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/search_symbols_payload.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
assertion_line: 9
expression: value
---
{
  "hitCount": 4,
  "hits": [
    {
      "crateName": "demo",
      "kind": "struct",
      "language": "python",
      "line": 1,
      "location": "packages/python/demo/tool.py:1",
      "name": "AlphaClient",
      "navigationTarget": {
        "category": "doc",
        "column": null,
        "line": 1,
        "lineEnd": 1,
        "path": "packages/python/demo/tool.py",
        "projectName": "kernel",
        "rootLabel": "packages"
      },
      "path": "packages/python/demo/tool.py",
      "projectName": "kernel",
      "rootLabel": "packages",
      "score": 0.95,
      "source": "project"
    },
    {
      "crateName": "demo",
      "kind": "struct",
      "language": "rust",
      "line": 1,
      "location": "packages/rust/crates/demo/src/lib.rs:1",
      "name": "AlphaService",
      "navigationTarget": {
        "category": "doc",
        "column": null,
        "line": 1,
        "lineEnd": 1,
        "path": "packages/rust/crates/demo/src/lib.rs",
        "projectName": "kernel",
        "rootLabel": "packages"
      },
      "path": "packages/rust/crates/demo/src/lib.rs",
      "projectName": "kernel",
      "rootLabel": "packages",
      "score": 0.95,
      "source": "project"
    },
    {
      "crateName": "demo",
      "kind": "function",
      "language": "rust",
      "line": 2,
      "location": "packages/rust/crates/demo/src/lib.rs:2",
      "name": "alpha_handler",
      "navigationTarget": {
        "category": "doc",
        "column": null,
        "line": 2,
        "lineEnd": 2,
        "path": "packages/rust/crates/demo/src/lib.rs",
        "projectName": "kernel",
        "rootLabel": "packages"
      },
      "path": "packages/rust/crates/demo/src/lib.rs",
      "projectName": "kernel",
      "rootLabel": "packages",
      "score": 0.95,
      "source": "project"
    },
    {
      "crateName": "demo",
      "kind": "function",
      "language": "python",
      "line": 4,
      "location": "packages/python/demo/tool.py:4",
      "name": "alpha_helper",
      "navigationTarget": {
        "category": "doc",
        "column": null,
        "line": 4,
        "lineEnd": 4,
        "path": "packages/python/demo/tool.py",
        "projectName": "kernel",
        "rootLabel": "packages"
      },
      "path": "packages/python/demo/tool.py",
      "projectName": "kernel",
      "rootLabel": "packages",
      "score": 0.95,
      "source": "project"
    }
  ],
  "indexingState": "ready",
  "partial": false,
  "query": "alpha",
  "selectedScope": "project"
}
